opam-version: "2.0"
name: "sat-bench"
synopsis: "Benchmark various SAT solvers"
license: "todo"
version: "dev"
author: ["Guillaume Bury"]
maintainer: ["Guillaume Bury"]
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
]
depends: [
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "oclock"
  "dolmen"
  "printbox"
  "base-unix"
  "msat"
  "minisat"
  "sattools"
  "sattools-minisat"
  "sattools-cryptominisat"
  "ocaml-sat-solvers"
  "aez"
  "mc2"
  "ocaml" { >= "4.03.0" }
]
tags: [ "sat" "bench" ]
homepage: "https://github.com/gbury/sat-bench"
dev-repo: "git+https://github.com/gbury/sat-bench.git"
bug-reports: "https://github.com/gbury/sat-bench/issues/"

